# image_processor

./: CMakeLists.txt  Color.cpp  Color.h  DPixelArray.cpp  DPixelArray.h  FilterController.cpp  FilterController.h  FilterInterface.cpp  FilterInterface.h  Image.cpp  Image.h  Makefile  MatrixFilter.cpp  MatrixFilter.h  PixelArray.cpp  PixelArray.h  cmake_install.cmake  image_processor.cpp
filters/: Crop.cpp  Crop.h  Edge.cpp  Edge.h  FishEye.cpp  FishEye.h  GaussianBlur.cpp  GaussianBlur.h  Grayscale.cpp  Grayscale.h  Negative.cpp  Negative.h  Sharpening.cpp  Sharpening.h
